--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@ WikiReader/obj
 /data/lurk_data.zip
 /LurkViewer/Resources/Raw/lurk_data.zip
 /WikiReader.Tests/obj
-/WikiReader.Tests/bin/Debug/net6.0
+/WikiReader.Tests/bin
