--- a/LurkViewer/Platforms/Android/AndroidManifest.xml
+++ b/LurkViewer/Platforms/Android/AndroidManifest.xml
@@ -3,5 +3,5 @@
 	<application android:allowBackup="true" android:icon="@mipmap/ownlurk" android:supportsRtl="true"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-sdk />
+	<uses-sdk android:minSdkVersion="21" />
 </manifest>
