Added favorites page

--- a/LurkViewer/LurkViewer.csproj
+++ b/LurkViewer/LurkViewer.csproj
@@ -59,6 +59,13 @@
 	  <MauiXaml Update="Views\ArticleViewPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\FavoritesPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Resources\Images\" />
 	</ItemGroup>
 
 </Project>
